force-app/main/default/objects/RE_Sales_Tax__c/fields/RE_Product_Type__c.field-meta.xml
<CustomField>
    <fullName>RE_Product_Type__c</fullName>
    <label>Product Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>