force-app/main/default/objects/RE_Sales_Tax__c/fields/RE_Publish_Date__c.field-meta.xml
<CustomField>
    <fullName>RE_Publish_Date__c</fullName>
    <label>Publish Date</label>
    <type>Date</type>
</CustomField>