force-app/main/default/objects/RE_Sales_Tax__c/fields/RE_Tax_Unit__c.field-meta.xml
<CustomField>
    <fullName>RE_Tax_Unit__c</fullName>
    <label>Tax Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>RE_Rate_Unit_Set</valueSetName>
    </valueSet>
</CustomField>