force-app/main/default/objects/RE_Sales_Tax__c/fields/RE_Tax_Value__c.field-meta.xml
<CustomField>
    <fullName>RE_Tax_Value__c</fullName>
    <label>Tax Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>