force-app/main/default/objects/RE_Sales_Tax__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RE_Product_Type__c</columns>
    <columns>RE_Tax_Value__c</columns>
    <columns>RE_Tax_Unit__c</columns>
    <columns>RE_Publish_Date__c</columns>
    <columns>RE_Valid_From__c</columns>
    <columns>RE_Valid_To__c</columns>
    <columns>RE_Region__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>