force-app/main/default/objects/RE_Sales_Tax__c/listViews/Malaysia_Sales_tax.listView-meta.xml
<ListView>
    <fullName>Malaysia_Sales_tax</fullName>
    <columns>NAME</columns>
    <columns>RE_Product_Type__c</columns>
    <columns>RE_Tax_Value__c</columns>
    <columns>RE_Tax_Unit__c</columns>
    <columns>RE_Publish_Date__c</columns>
    <columns>RE_Valid_From__c</columns>
    <columns>RE_Valid_To__c</columns>
    <columns>RE_Region__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RE_Region__c</field>
        <operation>equals</operation>
        <value>Peninsular,Sabah,Sarawak</value>
    </filters>
    <label>Malaysia Sales tax</label>
    <sharedTo>
        <territory>Revolution_Territory.Malaysia</territory>
    </sharedTo>
</ListView>